--- a/webapp/src/widgets/label.scss
+++ b/webapp/src/widgets/label.scss
@@ -3,7 +3,6 @@
     align-items: center;
     padding: 2px 8px;
     margin-right: 5px;
-    margin-bottom: 5px;
     border-radius: 3px;
     line-height: 20px;
     color: rgba(var(--center-channel-color-rgb), 0.8);
